--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cloudinary==1.20.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.5
+django-countries==6.1.2
 django-crispy-forms==1.9.0
 django-heroku==0.3.1
 docopt==0.6.2
