--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.7
 certifi==2020.4.5.1
+chardet==3.0.4
 cloudinary==1.20.0
 dj-database-url==0.5.0
 dj-static==0.0.6
@@ -10,12 +11,15 @@ django-heroku==0.3.1
 docopt==0.6.2
 gitignore==0.0.8
 gunicorn==20.0.4
+idna==2.9
 Pillow==7.1.1
 psycopg2==2.8.5
 python-dotenv==0.13.0
 pytz==2019.3
+requests==2.23.0
 six==1.14.0
 sqlparse==0.3.1
 static3==0.7.0
+stripe==2.45.0
 urllib3==1.25.9
 whitenoise==5.0.1
